fix(styles): truncate on 3 lines

--- a/apps/portfolio-v2/src/components/NoteCard/styles.module.css
+++ b/apps/portfolio-v2/src/components/NoteCard/styles.module.css
@@ -3,6 +3,13 @@
   position: relative;
 }
 
+.noteCard p {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 .noteCard:nth-child(1n):where(:focus-within, :hover) {
   border-color: var(--accent);
 }
